dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR(gv_file.c)

AM_INIT_AUTOMAKE(gv_utils, v1.17)
AM_CONFIG_HEADER(config.h)

dnl Default for GVS and friends.
AC_PREFIX_DEFAULT(/usr/local/trmm/GVBOX)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PATH_PROGS(perlbin,perl)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_STRUCT_TM

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(mktime strdup strstr)

dnl Modify the prefix based on --prefix=
if test $prefix = NONE; then
  prefix=$ac_default_prefix
fi
LIBDIR="-L$prefix/lib"
LIBS="-lz -lm"

# The order of the libraries is important.
# If mounting with shared libraries we may have to specify all possible libraries.
# First check with simple LIBS list, if it fails, then expand the list.

AC_CHECK_LIB(implode,  _implode,           ,,$LIBDIR)
AC_CHECK_LIB(jpeg,     jpeg_CreateCompress,,,$LIBDIR)
AC_CHECK_LIB(df,       DFopen,             ,,$LIBDIR)
AC_CHECK_LIB(mfhdf,    SDstart,            ,,$LIBDIR)
AC_CHECK_LIB(tsdistk,  TKopen,             ,,$LIBDIR)

# Disable cache.
L=""
unset ac_cv_lib_rsl_RSL_print_version
AC_CHECK_LIB(rsl,      RSL_print_version,
             L="-lrsl",
             unset ac_cv_lib_rsl_RSL_print_version,
             $LIBDIR)
if test "$L" = ""; then
AC_CHECK_LIB(rsl,      RSL_print_version,
             L="-lrsl -letor",
             unset ac_cv_lib_rsl_RSL_print_version,
             $LIBDIR -letor)
fi
LIBS="$L $LIBS"
L=""

AC_CHECK_LIB(etor,      RSL_to_EDGE, , , $LIBDIR)

LIBS="$LIBDIR $LIBS"



AC_CONFIG_FILES([doc/Makefile Makefile programs/Makefile])
AC_OUTPUT
